--- a/talentstream/public/portal/assets/css/main.css
+++ b/talentstream/public/portal/assets/css/main.css
@@ -198,10 +198,14 @@ a:focus {
   border-bottom: 2px solid #ff4f57;
 }
 #content {
-  padding: 80px 0;
+  padding: 180px 0;
+  z-index: 1020!important;  /* Lower than sidebar */
+    position: relative;
 }
 .main-container {
   padding: 80px 0;
+   z-index: 1020!important;  /* Lower than sidebar */
+    position: relative;
 }
 .no-padding {
   padding: 0px !important;
